@@ -291,6 +291,9 @@
 	Fixed off-by-one error on reducing history size, which could led to
 	loosing last directory history element.
 
+	Fixed parsing of 'classify' when it includes an entry with empty prefix.
+	Thanks to filterfalse.
+
 0.8.2-beta to 0.8.2
 
 	Added support for matchit to filetype plugin.  Patch by filterfalse.
